--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "devDependencies": {
     "nodemon": "1.18.4"
   },
-  "keywords": []
+  "keywords": [
+    "test",
+    "worker",
+    "fuzz",
+    "fuzzy"
+  ]
 }
